# noport

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  setup.rs  start.rs  status.rs  stop.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: daemon.rs  lib.rs  server.rs  socket.rs  store.rs  watcher.rs
crates/lib/: Cargo.toml
crates/lib/src/: client.rs  communication.rs  domain.rs  hosts.rs  lib.rs  linux.rs  port.rs  store.rs  subprocess.rs
crates/noport/: Cargo.toml
crates/noport/src/: hosts.rs  lib.rs  main.rs  setup.rs  start.rs  status.rs  stop.rs  store.rs  subprocess.rs
