[workspace]
members = ["crates/*"]

[workspace.package]
name = "noport"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.149"
paris = { version = "1.5", features = ["macros"] }