[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
noport-lib = { path = "../noport" }
uuid = "1.22.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
ansi_term = "0.12"