[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
noport-lib = { path = "../lib" }
uuid = "1.22.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
paris.workspace = true
notify = { version = "8.1.0", features = ["serde"] }
serde_json = { workspace = true }
serde = { workspace = true }
nix = { version = "0.29", features = ["user"] }
