[package]
name = "noport-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tempdir = "0.3.7"
uuid = { version = "1.22.0", features = ["v4"] }
rand = "0.10.0"
ansi_term = "0.12"